# python-code-review-env

./: .gitignore  Dockerfile  Project.md  README.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml  testing.md
examples/: __init__.py  python_review_examples.py
graders/: __init__.py  common.py  optimization.py  pytest_runner.py  syntax.py
server/: Dockerfile  __init__.py  app.py  code_review_env_environment.py  code_review_environment.py  env.py  grading.py  python_env_environment.py  static_review.py  task_bank.py
summary/: 01_introduction_quickstart.md  02_using_environments.md  03_building_environments.md  04_packaging_deploying.md  05_contributing_hf.md  README.md
tasks/: __init__.py  task_bank.py
tests/: test_api.py  test_environment.py  test_examples.py  test_grading.py  test_static_review.py
tutorial/: HackathonChecklist.md  tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md
